Cannot place 'Add to cart' button in correct place and 'Acme Store' needs to align with product list

--- a/src/components/Cart.css
+++ b/src/components/Cart.css
@@ -1,6 +1,7 @@
 :local(.cart){
   display: flex;
   float: left;
+  margin: 1rem;
   width: 25%;
   justify-content: center;
 }
